--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.18",
     "@testing-library/react": "^12.1.2",
+    "miragejs": "^0.1.43",
     "webpack": "^5.68.0"
   }
 }
